# api

./: .bandit  .dockerignore  .eslintrc.json  .gitignore  .grype.yaml  .scalafmt.conf  Dockerfile  Dockerfile_base  Dockerfile_builder  Procfile  build-dependencies  build.sbt  buildspec.yml  codecov.yml  deploy_lambda.tf  infrastructure.tf  local_setup.yml  manage.py  package-lock.json  package.json  readme-default.md  readme.md  requirements.txt  static.json  version.sbt
.github/: dependabot.yml
ForeignLanguageReader/: settings.py  urls.py  wsgi.py
SubmitPage/: apps.py  views.py
api/: .eslintrc.json  .gitignore  Dockerfile  (+10 more)
api-v2/: Dockerfile  build.sbt  build.sbt.bak
jobs/refresh-definitions/: README.md  pyproject.toml
language-service/: .flake8  .gitignore  Dockerfile  buildspec.yml  pyproject.toml
language-service/language_service/: LanguageService.py  cache.py  gunicorn.conf.py
language-service/language_service/client/: __init__.py
language-service/language_service/client/definition/: __init__.py  cedict.py  wiktionary.py
language-service/language_service/controller/: __init__.py  common.py  definition.py  document.py  health.py
language-service/language_service/dto/: __init__.py  definition.py  word.py
language-service/language_service/nlp/: __init__.py  common.py
language-service/language_service/nlp/chinese/: __init__.py
language-service/language_service/nlp/common/: __init__.py
language-service/language_service/nlp/english/: __init__.py
language-service/language_service/nlp/spanish/: __init__.py
language-service/language_service/service/definition/: __init__.py  chinese.py  english.py  spanish.py
language-service/language_service/service/definition/cedict/: __init__.py
language-service/language_service/service/definition/language/: chinese.py  english.py  spanish.py
language-service/language_service/service/definition/sources/: cedict.py  wiktionary.py
language-service/language_service/service/definition/wiktionary/: __init__.py
language-service/language_service/service/nlp/: __init__.py
language-service/language_service/service/nlp/chinese/: __init__.py
language-service/language_service/service/nlp/common/: __init__.py
language-service/language_service/service/nlp/english/: __init__.py
language-service/language_service/service/nlp/spanish/: __init__.py
language-service/language_service/service/tag/: __init__.py  chinese.py  english.py  spanish.py
language-service/language_service/service/vocab/: __init__.py
language-service/language_service/service/vocab/cedict/: __init__.py
language-service/language_service/service/vocab/wiktionary/: __init__.py
language-service/tests/: test_language_service.py
language-service/tests/client/: test_cedict.py  test_wiktionary.py
language-service/tests/controller/: test_common_functions.py  test_definition.py  test_document.py  test_health.py
language-service/tests/nlp/: test_tagging.py
language-service/tests/service/definition/: test_chinese.py  test_definition.py  test_english.py  test_spanish.py
language-service/tests/service/definition/cedict/: test_definition.py
language-service/tests/service/definition/language/: test_chinese.py  test_english.py  test_spanish.py
language-service/tests/service/definition/sources/: test_cedict.py  test_wiktionary.py
language-service/tests/service/definition/wiktionary/: test_definition.py
language-service/tests/service/tag/: test_tagging.py
vocabulary/: config.yaml  deploy_lambda.tf  event.json  pyproject.toml  readme.md  requirements.txt  service.py  vocabulary_lambda_infrastructure.tf
vocabulary/tests/: test_vocabulary.py
(+835 files in other folders)
