[tool.poetry]
name = "language-service"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero-Zhang <lucas@lucaskjaerokjaero.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
spacy = "^2.2.3"
thulac = "^0.2.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}
es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-2.2.5/es_core_news_sm-2.2.5.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
safety = "^1.8.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
