[tool.poetry]
name = "language-service"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero-Zhang <lucas@lucaskjaerokjaero.com>"]

[tool.poetry.dependencies]
python = "^3.7"

# Web server
gunicorn = "^20.0.4"
flask = "^1.1.1"
flask_restful = "^0.3.8"

# Natural Language Processing
spacy = "^2.2.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz"}
es-core-news-sm = {url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-2.2.5/es_core_news_sm-2.2.5.tar.gz"}

# Vocabulary
wiktionaryparser = "^0.0.97"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# Linting and formatting
flake8 = "^3.7.9"
black = "^19.10b0"

# Security
safety = "^1.8.5"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
