[tool.poetry]
name = "vocabulary-foreign-language-reader"
version = "0.1.0"
description = "Vocabulary"
authors = ["Lucas Kjaero <lucas@lucaskjaero.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wiktionaryparser = "^0.0.97"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
