[tool.poetry]
name = "refresh-definitions"
version = "0.1.0"
description = ""
authors = ["Lucas Kjaero-Zhang <lucas@lucaskjaerozhang.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
elasticsearch = "^7.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
